# gamehost

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md
.github/workflows/: release.yml
desktop/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
desktop/capabilities/: default.json
desktop/icons/: icon.icns
desktop/resources/: uninstall-cleanup.ps1
desktop/src/: main.rs
docs/: accounts-owner-setup.md  architecture.md
docs/plans/: 2026-06-21-engine-subscription-client.md  2026-06-24-app-redesign-phase1-brand.md  2026-06-24-app-redesign-phase2-shell.md  2026-06-24-app-redesign-phase3-tabs.md  2026-06-25-app-redesign-phase4-onboarding.md  2026-06-26-relay-client-switch-plan.md
docs/specs/: 2026-06-24-app-ux-overhaul-design.md  2026-06-26-relay-client-switch-design.md
ee/: LICENSE  README.md
engine/: go.mod  go.sum
scripts/: build-desktop.ps1  desktop-build.ps1  desktop-dev.ps1  dev.ps1  release.ps1
supabase/migrations/: 0001_profiles.sql  (+2 more)
templates/: ark-ascended.yaml  conan.yaml  corekeeper.yaml  cs2.yaml  dst.yaml  eco.yaml  enshrouded.yaml  factorio.yaml  insurgency.yaml  minecraft-bedrock.yaml  minecraft-curseforge.yaml  minecraft-java-paper.yaml  minecraft-modrinth.yaml  mordhau.yaml  necesse.yaml  openttd.yaml  palworld.yaml  rust.yaml  satisfactory.yaml  soulmask.yaml  squad.yaml  terraria.yaml  tf2.yaml  unturned.yaml  valheim.yaml  veloren.yaml  vintagestory.yaml  vrising.yaml
ui/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  (+3 more)
(+151 files in other folders)
