[package]
name = "gamehost-desktop"
version = "0.4.9"
description = "GameNest desktop shell"
authors = ["GameHost"]
edition = "2021"

# The desktop shell is intentionally thin: it bundles + launches the Go engine
# as a sidecar and points a native WebView2 window at the React UI. All game
# logic lives in the engine, so this crate stays small.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
